# d-app

./: PROJECT_INFO.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/campaigns/[id]/: page.tsx
app/create/: page.tsx
app/explore/: page.tsx
components/: LandingPage.tsx  Navbar.tsx
components/campaigns/: FundingActivity.tsx
components/landing-page/: Navbar.tsx  campaigns.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  stats.tsx
lib/: ipfs.ts  providers.tsx
lib/hooks/: useCampaignQueries.ts  useHopeRise.ts
lib/idl/: hope_rise.json  hope_rise.ts
lib/solana/: program.ts
smart-contract/: Anchor.toml  Cargo.toml
smart-contract/programs/hope_rise/: Cargo.toml
smart-contract/programs/hope_rise/src/: constants.rs  errors.rs  lib.rs
