[package]
name = "hope_rise"
version = "0.1.0"
description = "Solana smart contract for Hope Rise crowdfunding platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hope_rise"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
